# Assignment-Eightfold.ai

./: README.md
candidate-transformer/: .gitignore  README.md  pyproject.toml  requirements.txt
candidate-transformer/configs/: bad_config.json  detailed_view.json  recruiter_view.json
candidate-transformer/gold/: aarav_sharma.json  priya_sharma_a.json  priya_sharma_b.json  vivaan_reddy.json
candidate-transformer/outputs/: output_custom.json  output_default.json  output_detailed.json
candidate-transformer/samples/broken/: malformed.json
candidate-transformer/samples/structured/: ats_blob.json  recruiter_export.csv
candidate-transformer/tests/: conftest.py  test_adapters.py  test_arbitrate.py  test_builder.py  test_confidence.py  test_gold_profiles.py  test_matcher.py  test_models.py  test_normalize.py  test_projection.py  test_robustness.py  test_validation.py
candidate-transformer/tests/fixtures/: sample_ats.json  sample_notes.txt  sample_recruiter.csv
candidate-transformer/tools/: make_resumes.py
candidate-transformer/transformer/: __main__.py  cli.py  models.py  pipeline.py
candidate-transformer/transformer/adapters/: ats_json.py  base.py  recruiter_csv.py  recruiter_notes.py  resume.py
candidate-transformer/transformer/canonical/: builder.py
candidate-transformer/transformer/merge/: arbitrate.py  confidence.py  matcher.py
candidate-transformer/transformer/normalize/: dates.py  emails.py  headline.py  links.py  location.py  names.py  phones.py  skills.py  years_experience.py
candidate-transformer/transformer/project/: config.py  projector.py  (+2 more)
(+9 files in other folders)
