[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "transformer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "phonenumbers",
    "pdfplumber",
    "python-docx",
    "reportlab",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["transformer*"]
